@@ -368,19 +368,17 @@ foreach my $static (undef, 'off', 'on')
 
         cmp_deeply(
             [
-                $tzil->plugin_named('@Author::ETHER/MakeMaker::Fallback'),
-                $tzil->plugin_named('@Author::ETHER/ModuleBuildTiny::Fallback'),
+                $tzil->plugin_named('@Author::ETHER/ModuleBuildTiny'),
             ],
             [
                 methods(default_jobs => 9),
-                methods(default_jobs => 9),
             ],
-            'installer configuration settings are properly added to both installer payloads',
+            'installer configuration settings are properly added to installer payload(s)',
         );
 
         cmp_deeply(
             [
-                ($tzil->plugin_named('@Author::ETHER/ModuleBuildTiny::Fallback')->plugins)[1],  # MBT
+                $tzil->plugin_named('@Author::ETHER/ModuleBuildTiny'),
                 $tzil->plugin_named('@Author::ETHER/StaticInstall'),
             ],
             [
@@ -401,14 +399,14 @@ foreach my $static (undef, 'off', 'on')
 
         my $build_dir = path($tzil->tempdir)->child('build');
 
+        my @files = recursive_child_files($build_dir);
         cmp_deeply(
-            [ recursive_child_files($build_dir) ],
-            superbagof(qw(
-                Makefile.PL
-                Build.PL
-            )),
-            'both Makefile.PL and Build.PL were generated by the pluginbundle',
+            \@files,
+            superbagof(qw(Build.PL)),
+            'Build.PL was generated by the pluginbundle',
         );
+
+        ok((!grep $_ eq 'Makefile.PL', @files), 'Makefile.PL was not included by default');
 
         my $prereq_reporter = path($build_dir)->child('t', '00-report-prereqs.t')->slurp_utf8;
         like(
